--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -21,7 +21,7 @@ body {
     @include flexCenter(column);
     justify-content: flex-start;
     background: url("../images/bg-pattern.svg") no-repeat;
-    background-size: 100% 50%;
+    background-size: 100% 50vh;
 
     @include desktopSize {
         background-size: contain;
